--- a/styles.css
+++ b/styles.css
@@ -1,97 +1,239 @@
+@font-face {
+    font-family: 'Lato';
+    src: url('./fonts/Lato/Lato-Black.ttf') format('truetype');
+    
+}
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-@font-face {
-    font-family: "Questrial";
-    src: url('./fonts/Questrial-Regular.ttf');
+    font-family: 'Lato';
 }
 
 #wrapper {
     display: grid;
     grid-template-columns: 1fr 4fr;
-}
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+        "aside header header header header"
+        "aside header header header header"
+        "footer footer footer footer footer";
 
+}
 #aside {   
     padding: 50px 0px 50px 50px;
-
+    display: grid;
+    grid-area: aside;
+    grid-template-rows: .1fr .1fr 1fr;
 }
-
-
 #logo {
-    height: 200px;
+    width: 60%;
+    margin: 0;
 }
-
+#header {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    align-self: flex-start;
+    justify-content: space-around;
+    margin-top: 15%;
+}
 .header-logo{
-    height: 25px;
+    width: 80%;
 }
-
 .header-item {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: .3fr 1fr;
     text-align: left;
-    margin-top: 20px;
+    align-self: flex-start;
+    justify-self: stretch;
 }
-
 .header-item p {
     justify-self: start;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.1rem;
+    margin-bottom: 18%;
+    align-self: center;
 }
-
 .left-sub-sec_img {
     height: 150px;
 }
-
 .left-subsection {
     display: grid;
-    grid-template-rows: 1fr 4fr 4fr;
-
+    grid-template-rows: .5fr 3fr 3fr;
 }
-
 .left-subsection > p {
     font-size: 1.5rem;
     align-self: center;
-    font-family: sans-serif;
     font-weight: 600;
 }
-
 .sub-section {
     display: grid;
-    grid-template-rows: 1fr 3fr 3fr;
+    grid-template-rows: 1fr 2fr 2fr;
     margin-bottom: 50px;
+    padding: 20px 10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .sub-section :nth-child(1) {
     align-self: center;
     font-size: 1.1rem;
     font-weight: 500;
+    font-style: italic;
 }
-
 .sub-section :nth-child(2) {
     justify-self: center;
     width: 100%;
 }
-
 .sub-section :nth-child(3) {
-    font-size: 0.9rem;
-    align-self: center;
-    line-height: 15px;
-}
+    font-size: 0.75rem;
+    margin-top: 20px;
+    line-height:170%;
 
-
-#header {
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    margin: 20px 0;
 }
 
 #main {
     padding: 50px;
+    display: grid;
+    grid-area: header;
+}
+.figcap {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.figcap figcaption {
+    justify-self: center;
+    font-size: .8rem;
+    color: #ea8f67;
+    padding: 10px;
+    font-weight: 100;
+    font-style: oblique;
 
 }
 
+
+
+#right-subsection-second {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr 1fr;
+    align-self: center;
+    grid-gap: 20px;
+    margin-top: 5%;
+}
+#right-subsection-second * {
+    align-self: center;
+}
+#right-subsection-second div img{
+    height: 20px;
+    align-self: flex-end;
+}
+figure {
+    position: relative;
+    text-align: center;
+}
 figure > img {
     width: 100%;
+}
+.mid-left {
+    position: absolute;
+    bottom: 80%;
+    background-color: white;
+}
+.bot-right {
+    position: absolute;
+    bottom: 20%;
+    right: 0;
+    background-color: black;
+    color: white;
+}
+.img-text {
+    font-size: 2.5rem;
+    padding: 2% 4%;
+    font-style: italic;
+}
+.third-sec {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    margin: 5% 3%;
+}
+#right-subsection-third {
+    display: grid;
+    grid-template-rows: 1fr .4fr 1fr;
+}
+.right-section-third_img {
+    height: 100%;
+    width: 100%;
+}
+#right-subsection-third :nth-child(2) {
+    font-size: 1.2rem;
+    align-self: center;
+}
+#right-subsction-third :nth-child(3) {
+    font-size: .6rem;
+}
+
+
+/* CSS */
+.button-54 {
+    font-family: "Open Sans", sans-serif;
+    font-size: .8rem;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.25em 0.5em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-54:active {
+    box-shadow: 0px 0px 0px 0px;
+    top: 5px;
+    left: 5px;
+}
+.inp{
+    -webkit-appearance: none;
+    appearance: none;
+    border: 0;
+    font-family: "Open Sans", sans-serif;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: 0 auto;
+    font-size: .9rem;
+    font-weight: 400;
+    background: white;
+    align-self: center;
+    height: 100%;
+}
+.inp:focus {
+    outline: none;
+}
+
+#footer {
+    font-size: .8rem;
+    line-height: 140%;
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    grid-area: footer;
+    padding: 1% 0;
+    background:#A2A2A1FF;
+    color:#F1F4FFFF;
+}
+
+.copyright , .footer_logos{
+    width: 50%;
+
+}
+
+
+@media (min-width: 768px) {
+    .button-54 {
+    padding: 0.25em 0.75em;
+    }
 }
